--- a/templates/footer.html
+++ b/templates/footer.html
@@ -33,7 +33,7 @@
                 <h5 class="mb-3">Product</h5>
                 <ul class="list-unstyled">
                     <li class="mb-2">
-                        <a href="#" class="text-muted text-decoration-none hover-primary">
+                        <a href="{% url 'explore' %}" class="text-muted text-decoration-none hover-primary">
                             <i class="fas fa-map-marker-alt me-2"></i>Explore Locations
                         </a>
                     </li>
